--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /* .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -45,30 +50,63 @@
   color: #343434;
 }
 
-.div1 {
+/* .div1 {
   display: flex;
   flex: 1;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 0 16px;
   color: white;
   border-radius: 15px;
   background-color: #343434;
+} */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 16px;
+  color: white;
+  background-color: #343434;
+  margin: auto;
+  width: 500px;
 }
 
-.bomb-navbar {
+header > * {
+  flex: 1;
 }
 
-.timer-navbar {
+header > p {
+  text-align: end;
+}
+
+.detail-game {
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
 }
 
 main {
   display: grid;
-  gap: 20px;
-  width: 40%;
+  width: 500px;
+  gap: 2px;
   margin: auto;
   background-color: #343434;
+  padding: 16px;
 }
 
 button {
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
 }
+
+option[value="easy"] {
+  background-color: hsl(120, 100%, 50%);
+}
+
+option[value="medium"] {
+  background-color: hsl(60, 100%, 50%);
+}
+
+option[value="hard"] {
+  background-color: hsl(0, 100%, 50%);
+}
+
